Add new fields to models and update migration scripts; enhance seed data and API endpoint

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,23 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <div>
+      <div class="catalog">
+        <div class="book">
+          <div class="cover">
+            <div class="title">The Wind in the Willows</div>
+          </div>
+          <div class="pages"></div>
+        </div>
+        <div class="info">
+          <div>
+            <h1>Title</h1>
+            <h3>by Ron Chernow</h3> 
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
