--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,23 +4,64 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Book Reviews</title>
+
+    <!-- Reset default browser styles -->
+    <link rel="stylesheet" href="./src/reset.css" />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-
-    <div>
-      <div class="catalog">
-        <div class="book">
-          <div class="cover">
-            <div class="title">The Wind in the Willows</div>
-          </div>
-          <div class="pages"></div>
+    <div id="app">
+      <div class="book-details">
+        <div class="book-cover">
+          <div id="book-title" class="title">The Silent Echo</div>
+          <div id="author-name" class="author">by Jane Doe</div>
         </div>
-        <div class="info">
+        <div class="book-info">
           <div>
-            <h1>Title</h1>
-            <h3>by Ron Chernow</h3> 
+            <h2 id="book-title">BOOK TITLE</h2>
+            <p id="author-name" class="author-name">by AUTHOR NAME</p>
+            <p class="rating">⭐⭐⭐⭐⭐ (4)</p>
+            <hr />
+            <div class="pricing">
+              <div class="price-card">
+                <h3>eBook</h3>
+                <p id="ebook-price">price - 1</p>
+              </div>
+              <div class="price-card">
+                <h3>Audiobook</h3>
+                <p id="paperback-price">price</p>
+              </div>
+              <div class="price-card">
+                <h3>Paperback</h3>
+                <p id="paperback-price">price</p>
+              </div>
+              <div class="price-card">
+                <h3>Hardcover</h3>
+                <p id="hardcover-price">price + 10</p>
+              </div>
+            </div>
+            <div class="genre-grid">
+              <div class="genre-card">
+                <span id="genre1-emoji">🧙‍♂️</span>
+                <p id="genre1-label">Fantasy</p>
+              </div>
+              <div class="genre-card">
+                <span id="genre1-emoji">💖</span>
+                <p id="genre1-label">Romance</p>
+              </div>
+            </div>
+            <hr />
+            <div id="book-description">
+              'Beatae voluptatem dicta et assumenda fugit eaque quidem
+              consequatur. Fuga unde provident. Id reprehenderit soluta facilis
+              est laborum laborum. Illum aut non ut. Est nulla rem ipsa.
+              Voluptatibus quo pariatur est. Temporibus deleniti occaecati
+              pariatur nemo est molestias voluptas. Doloribus commodi et et
+              exercitationem vel et. Omnis inventore cum aut amet. Sapiente
+              deleniti et. Ducimus maiores eum. Rem dolorem itaque aliquam.'
+            </div>
           </div>
         </div>
       </div>
