add finish touches

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="book-details">
+      <!-- <div class="book-details">
         <div class="book-cover">
           <div id="book-title" class="title">The Silent Echo</div>
           <div id="author-name" class="author">by Jane Doe</div>
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
