refactor frontend components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,60 +12,7 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <div id="app">
-      <!-- <div class="book-details">
-        <div class="book-cover">
-          <div id="book-title" class="title">The Silent Echo</div>
-          <div id="author-name" class="author">by Jane Doe</div>
-        </div>
-        <div class="book-info">
-          <div>
-            <h2 id="book-title">BOOK TITLE</h2>
-            <p id="author-name" class="author-name">by AUTHOR NAME</p>
-            <p class="rating">⭐⭐⭐⭐⭐ (4)</p>
-            <hr />
-            <div class="pricing">
-              <div class="price-card">
-                <h3>eBook</h3>
-                <p id="ebook-price">price - 1</p>
-              </div>
-              <div class="price-card">
-                <h3>Audiobook</h3>
-                <p id="paperback-price">price</p>
-              </div>
-              <div class="price-card">
-                <h3>Paperback</h3>
-                <p id="paperback-price">price</p>
-              </div>
-              <div class="price-card">
-                <h3>Hardcover</h3>
-                <p id="hardcover-price">price + 10</p>
-              </div>
-            </div>
-            <div class="genre-grid">
-              <div class="genre-card">
-                <span id="genre1-emoji">🧙‍♂️</span>
-                <p id="genre1-label">Fantasy</p>
-              </div>
-              <div class="genre-card">
-                <span id="genre1-emoji">💖</span>
-                <p id="genre1-label">Romance</p>
-              </div>
-            </div>
-            <hr />
-            <div id="book-description">
-              'Beatae voluptatem dicta et assumenda fugit eaque quidem
-              consequatur. Fuga unde provident. Id reprehenderit soluta facilis
-              est laborum laborum. Illum aut non ut. Est nulla rem ipsa.
-              Voluptatibus quo pariatur est. Temporibus deleniti occaecati
-              pariatur nemo est molestias voluptas. Doloribus commodi et et
-              exercitationem vel et. Omnis inventore cum aut amet. Sapiente
-              deleniti et. Ducimus maiores eum. Rem dolorem itaque aliquam.'
-            </div>
-          </div>
-        </div>
-      </div> -->
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
